# quotes

./: .env.example  .gitignore  app.py  db.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
templates/: index.html
